--- a/nginx/html/admin.html
+++ b/nginx/html/admin.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Admin Panel</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="/static/js/common.js"></script>
-  <style>
-    body { background-color: #111; color: #eee; }
-  </style>
+  <title>Admin Panel</title>
+  <link rel="stylesheet" href="/css/common.css">
+  <script src="/js/common.js" defer></script>
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Devstral</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="/chat">Chat</a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
-      </ul>
-      <span class="navbar-text me-3" id="navbar-username">Loading...</span>
-      <button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
-    </div>
+<body class="dark-theme">
+  <nav class="top-nav">
+    <a href="/chat.html">Chat</a>
+    <a href="/admin.html">Admin</a>
+    <a href="/register.html">Register</a>
+    <button id="logout-button" style="display: none;">Logout</button>
+    <span id="navbar-username">Guest</span>
   </nav>
 
-  <div class="container mt-5">
+  <main>
     <h2>Admin Panel</h2>
-    <p>Admin actions go here.</p>
-  </div>
+    <div id="admin-content">Loading admin data...</div>
+  </main>
 
   <script>
-  (async () => {
-    try {
-      const res = await apiGet("/api/auth/me");
-      if (res.success && res.username) document.getElementById("navbar-username").innerText = `Logged in as: ${res.username}`;
-      else document.getElementById("navbar-username").innerText = "Guest";
-    } catch { document.getElementById("navbar-username").innerText = "Guest"; }
-  })();
+    DevstralCommon.loadUser();
+    DevstralCommon.loadAdminPanel();
   </script>
 </body>
 </html>
