--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,62 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>LLM Home</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="/static/js/common.js"></script>
+  <title>Devstral LLM</title>
+  <link rel="stylesheet" href="/css/common.css">
+  <script src="/js/common.js" defer></script>
   <style>
-    html, body { margin: 0; padding: 0; overflow: hidden; }
-    body { background: #111; color: #eee; }
+    canvas#bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      background: #121212;
+      color: #fff;
+      font-family: sans-serif;
+    }
+
+    nav.top-nav {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding: 10px 20px;
+      background: rgba(0, 0, 0, 0.7);
+      position: relative;
+      z-index: 2;
+    }
+
+    nav.top-nav a, nav.top-nav button {
+      margin-right: 15px;
+      color: #fff;
+      text-decoration: none;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    #navbar-username {
+      margin-left: auto;
+      font-weight: bold;
+    }
+
+    .center-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 60px);
+      text-align: center;
+      position: relative;
+      z-index: 1;
+    }
+
+    .center-content h1 {
+      font-size: 3em;
+      margin-bottom: 0.3em;
+    }
+
+    .center-content p {
+      font-size: 1.2em;
+      opacity: 0.8;
+    }
   </style>
 </head>
 <body>
   <canvas id="bg"></canvas>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Devstral</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="/chat">Chat</a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
-      </ul>
-      <span class="navbar-text me-3" id="navbar-username">Loading...</span>
-      <button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
-    </div>
+  <nav class="top-nav">
+    <a href="/chat.html">Chat</a>
+    <a href="/admin.html">Admin</a>
+    <a href="/register.html">Register</a>
+    <button id="logout-button" style="display: none;">Logout</button>
+    <span id="navbar-username">Guest</span>
   </nav>
 
-  <script>
-  const canvas = document.getElementById("bg");
-  const ctx = canvas.getContext("2d");
-  let nodes = [];
-  const numNodes = 50;
-  function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
-  window.addEventListener("resize", resize); resize();
-  for (let i = 0; i < numNodes; i++) {
-    nodes.push({ x: Math.random() * canvas.width, y: Math.random() * canvas.height, vx: (Math.random() - 0.5) * 0.5, vy: (Math.random() - 0.5) * 0.5 });
-  }
-  function animate() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    nodes.forEach(n => { n.x += n.vx; n.y += n.vy; if (n.x < 0 || n.x > canvas.width) n.vx *= -1; if (n.y < 0 || n.y > canvas.height) n.vy *= -1; });
-    for (let i = 0; i < numNodes; i++) {
-      for (let j = i + 1; j < numNodes; j++) {
-        const dx = nodes[i].x - nodes[j].x, dy = nodes[i].y - nodes[j].y, dist = Math.sqrt(dx*dx + dy*dy);
-        if (dist < 120) { ctx.strokeStyle = "rgba(255,255,255,0.1)"; ctx.beginPath(); ctx.moveTo(nodes[i].x, nodes[i].y); ctx.lineTo(nodes[j].x, nodes[j].y); ctx.stroke(); }
-      }
-    }
-    nodes.forEach(n => { ctx.fillStyle = "rgba(255,255,255,0.6)"; ctx.beginPath(); ctx.arc(n.x, n.y, 2, 0, Math.PI*2); ctx.fill(); });
-    requestAnimationFrame(animate);
-  }
-  animate();
+  <main class="center-content">
+    <h1>Welcome to my LLM</h1>
+    <p>Explore the future of language understanding with Devstral.</p>
+  </main>
 
-  (async () => {
-    try {
-      const res = await apiGet("/api/auth/me");
-      if (res.success && res.username) document.getElementById("navbar-username").innerText = `Logged in as: ${res.username}`;
-      else document.getElementById("navbar-username").innerText = "Guest";
-    } catch { document.getElementById("navbar-username").innerText = "Guest"; }
-  })();
+  <script>
+    const canvas = document.getElementById("bg");
+    const ctx = canvas.getContext("2d");
+    let nodes = [];
+    const numNodes = 50;
+    function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
+    window.addEventListener("resize", resize); resize();
+    for (let i = 0; i < numNodes; i++) {
+      nodes.push({ x: Math.random() * canvas.width, y: Math.random() * canvas.height, vx: (Math.random() - 0.5) * 0.5, vy: (Math.random() - 0.5) * 0.5 });
+    }
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      nodes.forEach(n => { n.x += n.vx; n.y += n.vy; if (n.x < 0 || n.x > canvas.width) n.vx *= -1; if (n.y < 0 || n.y > canvas.height) n.vy *= -1; });
+      for (let i = 0; i < numNodes; i++) {
+        for (let j = i + 1; j < numNodes; j++) {
+          const dx = nodes[i].x - nodes[j].x, dy = nodes[i].y - nodes[j].y, dist = Math.sqrt(dx*dx + dy*dy);
+          if (dist < 120) { ctx.strokeStyle = "rgba(255,255,255,0.1)"; ctx.beginPath(); ctx.moveTo(nodes[i].x, nodes[i].y); ctx.lineTo(nodes[j].x, nodes[j].y); ctx.stroke(); }
+        }
+      }
+      nodes.forEach(n => { ctx.fillStyle = "rgba(255,255,255,0.6)"; ctx.beginPath(); ctx.arc(n.x, n.y, 2, 0, Math.PI*2); ctx.fill(); });
+      requestAnimationFrame(animate);
+    }
+    animate();
+
+    (async () => {
+      try {
+        const res = await apiGet("/api/auth/me");
+        if (res.success && res.username) {
+          document.getElementById("navbar-username").innerText = `Logged in as: ${res.username}`;
+          document.getElementById("logout-button").style.display = "inline-block";
+          document.getElementById("logout-button").addEventListener("click", () => {
+            document.cookie = "access_token=; Max-Age=0; Path=/";
+            location.reload();
+          });
+        } else {
+          document.getElementById("navbar-username").innerText = "Guest";
+        }
+      } catch {
+        document.getElementById("navbar-username").innerText = "Guest";
+      }
+    })();
   </script>
 </body>
 </html>
