--- a/nginx/dynamic_content/chat.html
+++ b/nginx/dynamic_content/chat.html
@@ -83,6 +83,11 @@
     </div>
 </div>
 
+<!-- Load syntax highlighting library -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+
 <!-- Load JavaScript modules in correct dependency order -->
 {{ js_shared }}
 {{ js_sse }}
