--- a/nginx/dynamic_content/base.html
+++ b/nginx/dynamic_content/base.html
@@ -1,4 +1,4 @@
-<!-- base.html - Base template with common functionality -->
+<!-- base.html - Base template with versioned CSS -->
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page_title }}</title>
     
-    <!-- Static CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Static CSS with versioning -->
+    <link href="/css/bootstrap.min.css?v={{ css_version }}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/is_public.css">
+    <link rel="stylesheet" href="/css/is_public.css?v={{ css_version }}">
     
     <!-- External libraries -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
