--- a/nginx/dynamic_content/base.html
+++ b/nginx/dynamic_content/base.html
@@ -7,7 +7,7 @@
     <title>{{ page_title }}</title>
     
     <!-- Static CSS with versioning -->
-    <link href="/css/bootstrap.min.css?v={{ css_version }}" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/is_public.css?v={{ css_version }}">
     
